--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       <div class="container-fluid" id="pizza">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo totam excepturi, maxime officia a esse accusamus ipsum quia enim facere eaque quisquam velit! Voluptates sequi sit explicabo illum eveniet optio suscipit harum quo tempore, perferendis ex incidunt tenetur, ut, impedit iste error doloribus vero. Fugiat dolore eligendi error non molestiae distinctio? Quibusdam temporibus eaque molestias ea incidunt consequatur debitis quia vitae! Voluptatem ab ipsam tempore atque, ipsum dolor? Facere, alias!</p>
         <figure class="figure">
-          <img src="/img/pizza.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/2619967/pexels-ph…619967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <img src="pizza.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/2619967/pexels-ph…619967.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
           <figcaption class="figure-caption text-dark"><h5>Pizza chesse Burst</h5></figcaption>
         </figure>
         <figure class="figure">
-          <img src="/img/pizza1.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/1596884/pexels-ph…596884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+          <img src="pizza1.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/1596884/pexels-ph…596884.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
           <figcaption class="figure-caption text-dark"><h5>Spicy Pizza</h5></figcaption>
         </figure>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque libero sed, ut, quis non minus quo hic cum animi soluta et ducimus quod labore. Maxime, unde, quam quo debitis illum nesciunt, quia aliquid repudiandae ex itaque iusto libero? Itaque saepe ratione aperiam adipisci esse quaerat ipsum fuga enim perferendis magni. Sapiente dolore soluta adipisci minus ullam nam temporibus tenetur odio illo at. Odit perspiciatis in necessitatibus quam suscipit ipsum exercitationem nam commodi atque possimus, modi fugiat? Nobis, esse possimus! Id hic natus accusamus aperiam provident. Nulla voluptas adipisci iste, repellat numquam amet voluptatem laborum itaque porro officiis ratione vitae </p>
@@ -55,19 +55,19 @@
   <div class="container-fluid col-md-12">
     <div class="col-12">   
        <figure class="figure col-md-3">
-      <img src="/img/burger.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/3219547/pexels-ph…219547.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      <img src="burger.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/3219547/pexels-ph…219547.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
       <figcaption class="figure-caption">Burger 1</figcaption>
     </figure>
     <figure class="figure col-md-3">
-      <img src="/img/burger1.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/2983098/pexels-ph…983098.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      <img src="burger1.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/2983098/pexels-ph…983098.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
       <figcaption class="figure-caption">Burger 2</figcaption>
     </figure>
     <figure class="figure col-md-3">
-      <img src="/img/burger2.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/4676413/pexels-ph…676413.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      <img src="burger2.jpeg" class="figure-img img-fluid" alt="	https://images.pexels.com/photos/4676413/pexels-ph…676413.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
       <figcaption class="figure-caption">Burger 3</figcaption>
     </figure>
     <figure class="figure col-md-3">
-      <img src="/img/burger3.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/6242258/pexels-ph…242258.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+      <img src="burger3.jpeg" class="figure-img img-fluid" alt="https://images.pexels.com/photos/6242258/pexels-ph…242258.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
       <figcaption class="figure-caption">Burger 4</figcaption>
     </figure></div>
 
